--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>My Personal Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to My Personal Website</h1>
-    <p>This is a paragraph on my personal website!</p>
+    <div class="container">
+        <div class="photo">
+            <img src="personal_photo.jpg" alt="Personal Photo">
+        </div>
+        <div class="info">
+            <h1>My Name</h1>
+            <p>Here's a brief introduction about myself. I'm passionate about web development, design, and learning new technologies.</p>
+            <h2>Education History</h2>
+            <ul>
+                <li>BS in Computer Science from XYZ University, 2022</li>
+                <li>High School Diploma from ABC High School, 2018</li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
