--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <div class="photo">
-            <img src="personal_photo.jpg" alt="Personal Photo">
+            <img src="IMG_0077.JPG" alt="Personal Photo">
         </div>
         <div class="info">
             <h1>My Name</h1>
