--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1>My Name</h1>
+    </header>
     <div class="container">
         <div class="photo">
             <img src="IMG_0077.JPG" alt="Personal Photo">
         </div>
         <div class="info">
-            <h1>My Name</h1>
             <p>Here's a brief introduction about myself. I'm passionate about web development, design, and learning new technologies.</p>
             <h2>Education History</h2>
             <ul>
@@ -20,5 +22,8 @@
             </ul>
         </div>
     </div>
+    <footer>
+        <p>Contact me at <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+    </footer>
 </body>
 </html>
