--- a/index.html
+++ b/index.html
@@ -6,24 +6,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>My Name</h1>
-    </header>
     <div class="container">
-        <div class="photo">
+        <div class="profile-photo">
             <img src="IMG_0077.JPG" alt="Personal Photo">
         </div>
-        <div class="info">
-            <p>Here's a brief introduction about myself. I'm passionate about web development, design, and learning new technologies.</p>
-            <h2>Education History</h2>
-            <ul>
-                <li>BS in Computer Science from XYZ University, 2022</li>
-                <li>High School Diploma from ABC High School, 2018</li>
-            </ul>
+        <div class="content">
+            <h1>Terrance Liu</h1>
+            <p>I am a PhD student in the Machine Learning Department at Carnegie Mellon University, where I am advised by Steven Wu...</p>
+            <!-- More content goes here -->
+            <h2>Publications</h2>
+            <!-- List of publications -->
         </div>
     </div>
-    <footer>
-        <p>Contact me at <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-    </footer>
 </body>
 </html>
