--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Personal Website</title>
+    <title>My Personal Website - Terrance Liu</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div class="profile-photo">
-            <img src="IMG_0077.JPG" alt="Personal Photo">
+            <img src="IMG_0077.JPG" alt="Personal Photo of Terrance Liu">
         </div>
         <div class="content">
             <h1>Terrance Liu</h1>
             <p>I am a PhD student in the Machine Learning Department at Carnegie Mellon University, where I am advised by Steven Wu...</p>
-            <!-- More content goes here -->
+            <!-- Additional Content -->
             <h2>Publications</h2>
-            <!-- List of publications -->
+            <!-- List of Publications -->
         </div>
     </div>
 </body>
