--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Personal Website - Terrance Liu</title>
+    <title> Personal Website- Zhan (Sam) Shi</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,8 +11,8 @@
             <img src="IMG_0077.JPG" alt="Personal Photo of Terrance Liu">
         </div>
         <div class="content">
-            <h1>Terrance Liu</h1>
-            <p>I am a PhD student in the Machine Learning Department at Carnegie Mellon University, where I am advised by Steven Wu...</p>
+            <h1>Zhan (Sam) Shi</h1>
+            <p>I am a MSE in Data Science student at University of Pennsylvania.</p>
             <!-- Additional Content -->
             <h2>Publications</h2>
             <!-- List of Publications -->
