--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <img src="profile_photo.jpg" alt="Zhan (Sam) Shi" class="profile-photo">
+            <img src="IMG_0077.JPG" alt="Zhan (Sam) Shi" class="profile-photo">
             <h1>Zhan (Sam) Shi</h1>
             <p>I am a MSE in Data Science student at the University of Pennsylvania.</p>
         </header>
