--- a/index.html
+++ b/index.html
@@ -2,36 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Zhan (Sam) Shi - Data Scientist</title>
+    <title>Zhan (Sam) Shi</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <header class="header">
-            <img src="IMG_0077.JPG" alt="Zhan (Sam) Shi" class="profile-photo">
+        <div class="profile-column">
+            <img src="profile_photo.jpg" alt="Zhan (Sam) Shi" class="profile-photo">
+        </div>
+        <div class="content-column">
             <h1>Zhan (Sam) Shi</h1>
             <p>I am a MSE in Data Science student at the University of Pennsylvania.</p>
-        </header>
-        <section class="publications">
-            <h2>Publications</h2>
-            <p>Here you can list your academic publications and papers.</p>
-            <!-- List of publications will go here -->
-        </section>
-        <section class="research">
-            <h2>Research Interests</h2>
-            <p>Briefly describe your research interests and any ongoing projects.</p>
-            <!-- Detailed research interests -->
-        </section>
-        <section class="experience">
-            <h2>Professional Experience</h2>
-            <p>Detail your professional experience and any teaching roles you've undertaken.</p>
-            <!-- Professional experience details -->
-        </section>
-        <section class="contact">
-            <h2>Contact</h2>
-            <p>Feel free to get in touch with me via email at [your-email]@upenn.edu</p>
-            <!-- Additional contact information -->
-        </section>
+            <section class="publications">
+                <h2>Publications</h2>
+                <p>Here you can list your academic publications and papers.</p>
+                <!-- List of publications will go here -->
+            </section>
+            <section class="research">
+                <h2>Research Interests</h2>
+                <p>Briefly describe your research interests and any ongoing projects.</p>
+                <!-- Detailed research interests -->
+            </section>
+            <section class="experience">
+                <h2>Professional Experience</h2>
+                <p>Detail your professional experience and any teaching roles you've undertaken.</p>
+                <!-- Professional experience details -->
+            </section>
+            <section class="contact">
+                <h2>Contact</h2>
+                <p>Feel free to get in touch with me via email at [your-email]@upenn.edu</p>
+                <!-- Additional contact information -->
+            </section>
+        </div>
     </div>
 </body>
 </html>
