--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <div class="profile-column">
-            <img src="profile_photo.jpg" alt="Zhan (Sam) Shi" class="profile-photo">
+            <img src="IMG_0077.JPG" alt="Zhan (Sam) Shi" class="profile-photo">
         </div>
         <div class="content-column">
             <h1>Zhan (Sam) Shi</h1>
