--- a/index.html
+++ b/index.html
@@ -1,39 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="{{ site.lang | default: "en-US" }}">
+  <head>
     <meta charset="UTF-8">
-    <title>Zhan (Sam) Shi</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <div class="profile-column">
-            <img src="IMG_0077.JPG" alt="Zhan (Sam) Shi" class="profile-photo">
-        </div>
-        <div class="content-column">
-            <h1>Zhan (Sam) Shi</h1>
-            <p>I am a MSE in Data Science student at the University of Pennsylvania.</p>
-            <section class="publications">
-                <h2>Publications</h2>
-                <p>Here you can list your academic publications and papers.</p>
-                <!-- List of publications will go here -->
-            </section>
-            <section class="research">
-                <h2>Research Interests</h2>
-                <p>Briefly describe your research interests and any ongoing projects.</p>
-                <!-- Detailed research interests -->
-            </section>
-            <section class="experience">
-                <h2>Professional Experience</h2>
-                <p>Detail your professional experience and any teaching roles you've undertaken.</p>
-                <!-- Professional experience details -->
-            </section>
-            <section class="contact">
-                <h2>Contact</h2>
-                <p>Feel free to get in touch with me via email at [your-email]@upenn.edu</p>
-                <!-- Additional contact information -->
-            </section>
-        </div>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+{% seo %}
+    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
+    <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <![endif]-->
+    {% include head-custom.html %}
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+
+        {% if site.logo %}
+          <img src="{{site.logo | relative_url}}" alt="Logo" />
+        {% endif %}
+
+        <p>{{ site.description | default: site.github.project_tagline }}</p>
+
+        {% if site.github.is_project_page %}
+        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
+        {% endif %}
+
+        {% if site.github.is_user_page %}
+        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+        {% endif %}
+
+        {% if site.show_downloads %}
+        <ul class="downloads">
+          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
+          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+        </ul>
+        {% endif %}
+      </header>
+      <section>
+
+      {{ content }}
+
+      </section>
+      <footer>
+        {% if site.github.is_project_page %}
+        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+        {% endif %}
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
     </div>
-</body>
+    <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
+  </body>
 </html>
